--- a/images/Thomas and his friends_files/style.css
+++ b/images/Thomas and his friends_files/style.css
@@ -9,23 +9,36 @@ body {
 .footer,
 .intro {
     display: flex;
-    color: #e5e7eb;
+    color: #f9faf8;
     background-color: #1f2937;
 }
 
+ul {
+    margin-left: auto;
+    display: flex;
+    list-style: none;
+}
 
+a {
+    text-decoration: none;
+    color: #f9faf8;
+    padding: 15px;
+}
+
+h2 {
+    margin: 35px
+}
 
 .quote {
     display: flex;
     background-color: #e5e7eb;
     color: #1f2937;
-    font-size: 36px;
 }
 
 .footer {
     margin-top: auto;
     justify-content: center;
-    padding: 30px
+    padding: 20px
 }
 
 .intro,
@@ -58,21 +71,14 @@ img.left {
 
 .call-to-action {
     width: 1200px;
-    flex: auto;
-    border-radius: 9px;
+    border-radius: 5px;
     background-color: #3882f6;
-    color: #f9faf8;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /* flex: auto; */
 }
 
 .call-to-action button {
-    margin-right: 10%;
-}
-
-.action-text {
-    margin-left: 10%
+    align-self: flex-end;
 }
 
 .header {
@@ -82,19 +88,22 @@ img.left {
 
 .quotee {
     align-self: flex-end;
-    font-weight: 600;
 }
 
 .center {
     display: flex;
-    width: 700px;
-    font-style: italic;
-    font-weight: 300;
-    /* height: 150px; */
+    width: 400px;
+    height: 150px;
     flex-direction: column;
     justify-content: space-between;
     flex-direction: column;
-    margin: 40px 0px;
+}
+
+button {
+    color: #f9faf8;
+    background-color: #3882f6;
+    border-radius: 10px;
+    border: solid 1px #f9faf8;
 }
 
 .character {
@@ -110,21 +119,14 @@ img.left {
 }
 
 .intro {
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+}
+
+.hero-and-image {
+    display: flex;
     margin: 70px 0px;
-    gap: 30px
 }
-
-.intro button {
-    border: none;
-}
-
-
-.text-and-button {
-    align-self: flex-start;
-}
-
 
 .image-container {
     flex: 1;
@@ -136,13 +138,12 @@ img.left {
 .images {
     display: flex;
     justify-content: center;
-    gap: 25px;
-    margin-bottom: 50px;
+    gap: 45px;
 }
 
 .image-container img {
-    width: 145px;
-    height: 145px;
+    width: 175px;
+    height: 175px;
     background-image: url("./images/background.webp");
     background-position: bottom 32% left 15%;
     border: solid #3882f6;
@@ -152,6 +153,12 @@ img.left {
     align-items: center;
     object-fit: contain;
 }
+
+.image-container {
+    margin-bottom: 50px;
+}
+
+
 
 .left-edge,
 .right-edge {
@@ -167,71 +174,5 @@ img.left {
 .dark-blue-top {
     background-color: #1f2937;
     flex: 1;
-    display: flex;
-}
-
-.action-center {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.action-space {
-    flex: 1 1 17%
-}
-
-p {
-    max-width: 500px;
-}
-
-img {
-    height: 230px;
-    align-self: flex-start;
-}
-
-h1 {
-    margin-top: 0;
-    margin-bottom: 0px;
-    font-size: 48px;
-    font-weight: 800;
-    color: #f9faf8;
-}
-
-ul {
-    margin-left: auto;
-    display: flex;
-    list-style: none;
-    font-size: 15px;
-}
-
-a {
-    text-decoration: none;
-    color: #f9faf8;
-    padding: 15px;
-    padding-right: 0px;
-}
-
-h2 {
-    margin: 35px;
-    font-size: 36px;
-    font-weight: 800;
-}
-
-h4 {
-    font-size: 20px;
-    font-weight: 700;
-    margin-bottom: 0px;
-}
-
-.call-to-action p {
-    margin-top: 5px;
-}
-
-button {
-    color: #f9faf8;
-    background-color: #3882f6;
-    border-radius: 6px;
-    border: solid 3px #f9faf8;
-    padding: 3px 20px;
-    font-weight: 600;
+    display: flex
 }
